# subsetMatrix

./: .gitignore  LICENSE  README.md  pyproject.toml
src/subsetmatrix/: dataset_payload.py  engine.py  gpt_proposal.py  selecting_subsets.py
tests/: test_dataset_payload.py  test_engine.py  test_selecting_subsets.py
