[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subsetmatrix"
version = "0.1.0"
description = "Generate, select, and materialize subset membership matrices from observation sets."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Lucas Dornelles Cherobim" }
]
keywords = [
    "subsets",
    "combinations",
    "matrix",
    "numpy",
    "combinatorics",
    "dataset",
    "mask"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
    "pytest>=8"
]

[project.urls]
Homepage = "https://github.com/EngDornelles/subsetMatrix"
Repository = "https://github.com/EngDornelles/subsetMatrix"
Issues = "https://github.com/EngDornelles/subsetMatrix/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
